option('portable', type : 'boolean', value : false, 
    description: 'Enable a portable installation [default: false]')
option('ffi', type : 'boolean', value : true, 
    description: 'Enable FFI support [default: true]')
option('jit', type : 'boolean', value : true, 
    description: 'Enable the JIT Engine [default: true]')
option('lua52compat', type : 'boolean', value : false, 
    description: 'Enable Lua 5.2 basic support [default: false]')
option('gc64', type : 'boolean', value : true, 
    description: 'Enable GC64 collection [default: true]')

option('app', type : 'boolean', value : true, 
    description: 'Build the luajit executable [default: true]')
option('macos_target', type : 'string', value: '10.11', 
    description: 'Specify the macOS deployment target [default: 10.11]')
